# TFG-Silvia

./: .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  packages.txt  pyproject.toml  railway.toml
app/: __init__.py  cli.py
app/client/: model_cards.py
app/content/: __init__.py  about.md
app/core/: __init__.py  collections.py  date_utils.py
app/core/model_card/: __init__.py  constants.py
app/core/schemas/: __init__.py  model_card_schema.json
app/core/standards/: __init__.py  tg263.py
app/core/templates/: __init__.py  registry.py
app/core/templates/md/: __init__.py  appendix.md.j2  card_metadata.md.j2  components.md.j2  evaluations.md.j2  model_basic_information.md.j2  model_card_master.md.j2  other_considerations.md.j2  technical_specifications.md.j2  training.md.j2
app/services/: __init__.py  evaluations_extractor.py  rtstruct_state.py  schema_loader.py  serialization.py  state_store.py  uploads.py  validation.py
app/services/integrations/hf/: __init__.py  licenses.py
app/services/markdown/: __init__.py  renderer.py
app/services/readme/: __init__.py  builder.py
app/tests/: test_collections.py  test_date_utils.py
app/ui/: __init__.py
app/ui/components/: __init__.py  sidebar.py  topbar.py
app/ui/forms/: __init__.py  render.py
app/ui/screens/: __init__.py  about.py  forgot_password.py  load_model_card.py  login.py  main.py  my_cards.py  profile.py  published_cards.py  register.py  reset_password.py  task_selector.py
app/ui/screens/sections/: __init__.py  appendix.py  card_metadata.py  evaluation_data_mrc.py  model_basic_information.py  model_card_info.py  other_considerations.py  technical_specifications.py  training_data.py  warnings.py
app/ui/static/: auth.css  diff.css  global.css  sidebar.css  topbar.css
app/ui/utils/: __init__.py  auth.py  css.py  preview_file.py  typography.py
backend/: .env  Dockerfile  alembic.ini  config.py  dependencies.py  main.py  requirements.txt  security.py  start.sh
backend/api/v1/: router.py
backend/api/v1/routes/: admin.py  auth.py  model_cards.py  public_cards.py
backend/db/: session.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260322_9a0bf45e1df0_initial_schema.py  20260322_a2b3c4d5e6f7_create_model_card_tables.py  20260322_db394051b523_add_user_table.py  20260322_dfd4d38319af_add_publication_workflow.py  20260323_c8e2f1a3b490_add_name_fields_to_user.py  20260329_a7b8c9d0e1f2_user_defined_version_numbers.py  20260329_b2c3d4e5f6a7_restructure_versioned_model_cards.py  20260329_e1f2a3b4c5d6_rename_publication_statuses.py  20260329_f8a3e2c1d094_add_password_reset_tokens.py
backend/models/: __init__.py  base.py  model_card.py  password_reset_token.py  user.py
backend/repositories/: model_card.py  password_reset.py  user.py
backend/schemas/: model_card.py  password_reset.py  user.py
backend/services/: diff.py  email.py  model_card.py  password_reset.py  publication.py  user.py
backend/tests/: __init__.py  conftest.py  test_diff.py  test_password_reset.py  test_pdf_cover.py  test_publication.py
rt_model_card.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
